[package]
name = "braveblock"
version = "0.5.2"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2025"
description = "A fast and easy adblockplus parser and matcher based on adblock-rust package"
readme = "README.md"
repository = "https://github.com/intsights/braveblock"
homepage = "https://github.com/intsights/braveblock"
license = "MIT"
keywords = [
    "adblock",
    "ads",
    "adblocker",
    "rust",
    "brave",
    "abp",
    "pyo3",
]

[package.metadata.maturin]

[lib]
name = "braveblock"
crate-type = ["cdylib"]

[dependencies.adblock]
version = "0.6"
default-features = false
features = ["full-regex-handling", "embedded-domain-resolver"]

[dependencies.pyo3]
version = "0.25.1"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
